--- a/starter-code/styles.css
+++ b/starter-code/styles.css
@@ -1,11 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;700&display=swap');
 
 :root {
+    --black: rgb(25,24,38);
     --blue: rgb(102,226,220);
     --orange: rgb(250,116,83);
     --yellow: rgb(255,185,100);
-    --white: rgb(252,250,249);
-    --black: rgb(25,24,38);
+    --white: rgb(252,250,249);    
 }
 
 html {
@@ -16,30 +16,27 @@ html {
 *,
 *::before,
 *::after {
-    margin: 0;
-    padding: 0;
     border: 0;   
-    box-sizing: inherit; 
+    box-sizing: inherit;
+    margin: 0;
+    padding: 0;     
 }
 
 body {
-    font-family: 'IBM Plex Sans', sans-serif;
+    background: url(assets/bg-main-mobile.png) calc(100% + 250px) -220px no-repeat;
     color: var(--black);
+    font-family: 'IBM Plex Sans', sans-serif;    
 }
 
-header, main, footer {
-    padding: 10% 6%;
-}
-
-header {
-    background: url(assets/bg-main-mobile.png) calc(100% + 250px) 90% no-repeat;
+header, .app_information, footer {
+    padding: 5vh 6vw 3vh;
 }
 
 h1 {
     font-size: 40px;
     line-height: 48px;
     letter-spacing: -0.454545px;
-    margin-top: 30px
+    margin-top: 55px
 }
 
 p {
@@ -48,35 +45,29 @@ p {
     margin: 20px 0;
 }
 
-main {
+.app_image, .app_information, button {
+    border-radius: 12px;
+}
+
+.app_image {
     position: relative;
-    background-color: var(--orange);
-    border-radius: 12px;
-    margin-top: 500px;
-}
-
-main::before {
-    position: absolute;
-    top: -425px;
-    left: 0px;
-    content: url(assets/bg-pattern-2.svg);
+    margin-top: 70px;
+    top: 25px;
+    background:  url(assets/bg-pattern-2.svg) no-repeat center top, var(--black);
+    background-size: auto;
     text-align: center;
-    width: 100vw;
-    height: 500px;
-    background: var(--black);
     z-index: -1;
-    border-radius: 12px;
 }
 
-main::after {
-    position: absolute;
-    top: -545px;
-    left: 0px;
-    content: "";
-    background: url(assets/illustration-app.png) no-repeat center;
-    background-size: 209px 430px;
-    width: 100vw;
-    height: 500px;
+.app_image img {
+    position: relative;
+    top: -90px;
+    width: 209px;
+    height: 430px;
+}
+
+.app_information {
+    background: var(--orange);    
 }
 
 h2 {
@@ -84,11 +75,11 @@ h2 {
     line-height: 40px;    
 }
 
-h2, main p {
+h2, .app_information p {
     color: var(--white);
 }
 
-main p {
+.app_information p {
     font-size: 18px;
     line-height: 28px;
 }
@@ -114,7 +105,6 @@ p span {
 }
 
 button {
-    border-radius: 12px;
     width: 95%;
     margin: 20px auto;
     padding: 15px 0;
@@ -125,6 +115,8 @@ button {
     display: flex;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
+    transition: ease all 0.3s;
 }
 
 button img {
@@ -136,10 +128,155 @@ button img {
     color: var(--white);
 }
 
+.ios_button:hover {
+    background-color: var(--blue);
+}
+
+.android_button:hover {
+    background-color: var(--yellow);
+}
+
 ul {
     width: 100px;
     list-style-type: none;
     display: flex;
     justify-content: space-between;
     margin: 45px 0;
+}
+
+li img:hover {
+    filter: invert(57%) sepia(39%) saturate(1870%) hue-rotate(326deg) brightness(101%) contrast(96%);
+}
+
+
+@media screen and (min-width: 768px) {
+    body {
+        background: url(assets/bg-pattern-1.svg) calc(100% + 40px) -40px no-repeat,
+                    url(assets/bg-main-tablet.png) calc(100% + 115px) -280px no-repeat;
+    }
+
+    header, footer {
+        padding: 9vh 5vw 5vh;
+    }
+    
+    h1 {
+        width: 70vw;
+        font-size: 64px;
+        line-height: 64px;
+        letter-spacing: -0.727273px;
+        margin-top: 90px
+    }
+
+    p {
+        width: 70vw;
+        font-size: 18px;
+        line-height: 28px;
+        margin-top: 35px;
+    }  
+
+    main {
+        position: relative;
+        width: 100vw;
+        height: 950px;
+    }
+    
+    .app_image {
+        position: absolute;
+        width: 90vw;
+        text-align: left;
+        left: 50%;
+        top: 85px;
+        transform: translate(-50%);
+    }
+
+    .app_image img{
+        top: -110px;
+        left: 5vw;
+        width: 270px;
+        height: 556px;
+    }
+
+    .app_information {
+        position: absolute;
+        width: 400px; 
+        padding: 48px 49px; 
+        top: 350px; 
+        right: 10vw;  
+    }
+
+    .text {
+        width: 100%;    
+    }    
+
+    footer {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    footer a {
+        width: 100vw;
+    }
+
+    footer p {
+        width: 366px;
+        font-size: 16px;
+        line-height: 26px;
+    }
+}
+
+@media screen and (min-width: 1440px) {
+    body {
+        background: url(assets/bg-pattern-1.svg) calc(100% - 40px) -40px no-repeat,
+                    url(assets/bg-main-desktop.png) calc(100% + 210px) -280px no-repeat;
+    }
+
+    header, footer {
+        padding: 9vh 10vw 5vh;
+    }
+
+    h1 {
+        font-size: 88px;
+        line-height: 88px;
+        letter-spacing: -1px;
+    }
+
+    p, .text {
+        font-size: 20px;
+        line-height: 34px;
+    } 
+
+    .app_image {
+        width: 80vw;
+        background-position: calc(0vw + 41.5%) top;
+        top: 100px;
+    }
+
+    .app_image img{
+        top: -180px;
+        left: 8vw;
+        width: 312px;
+        height: 642px;
+    }
+
+    .app_information {
+        width: 446px; 
+        padding: 58px 59px 48px; 
+        right: 17vw; 
+    }
+
+    footer a {
+        width: auto;
+        align-self: start;
+    }
+
+    footer p {
+        width: 366px;
+        margin: 0 20% 0 0;
+    }
+
+    ul {
+        margin: 0;
+    }
 }
